--- a/dashboard_home/dashboard_home.html
+++ b/dashboard_home/dashboard_home.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Completed Orders</title>
-  <link rel="stylesheet" href="completed_orders.css" />
+  <link rel="stylesheet" href="dashboard_home.css" />
 </head>
 <body>
   <header>
